--- a/project04/Final.ipynb
+++ b/project04/Final.ipynb
@@ -445,10 +445,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig4 = px.histogram(recipes, x='minutes', nbins=20, title='Distribution of Minutes', \n",
+    "                    labels={'minutes': 'Minutes'})\n",
+    "fig4.update_layout(xaxis_title='Minutes', yaxis_title='Count')\n",
+    "fig4.write_html('/Users/jhkim/Desktop/dsc80-2025-wi/projects/project04/iframe_figures/minutes.html', include_plotlyjs='cdn')"
+   ]
   },
   {
    "cell_type": "markdown",
