--- a/project04/Final.ipynb
+++ b/project04/Final.ipynb
@@ -4,11 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project 4 Checkpoint 1\n",
+    "# Project Foodie\n",
     "\n",
-    "**Name(s)**: (your name(s) here)\n",
+    "**Junghwan Kim** \n",
     "\n",
-    "**Website Link**: (your website link)"
+    "**Website Link**: https://willkim1126.github.io/Recipe-Dataset-Project/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The dataset that was used in this project was originally scraped from [food.com](https://www.food.com/) and was scraped by the awsome authors of the paper called [Generating Personalized Recipes from Historical User Preferences](https://cseweb.ucsd.edu/~jmcauley/pdfs/emnlp19c.pdf). "
    ]
   },
   {
@@ -55,22 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1: Introduction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    " I'm interested in see how healthy certain meals can be with the information in the dataset. I was also intrigued about how big the dataset was. It make me think that I can build automatic recipe generator, with certain inputs (ingredients). Suppose you open your refrigerator and see ingredients but you don't know what to make. With train model, you can come up with a recipe that you can cook up, depending on the ingredients you have."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 2: Data Cleaning and Exploratory Data Analysis"
+    "## Data Cleaning and Exploratory Data Analysis"
    ]
   },
   {
@@ -1285,13 +1284,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [
@@ -1986,7 +1978,7 @@
     "### Conclusion \n",
     "Out of 549 hypothesis test, we were able to reject the null hypothesis for 256 tags which are stored in the variable 'healthy tags'.\\\n",
     "\\\n",
-    "In other words out of 549 unique recipe tags, the hypothesis test identified 256 tags that are statistically significant in their association with being healthy. These 256 “healthy tags” were then used to filter recipes, resulting in 102 recipes that exclusively consist of these healthy tags. This represents a small subset of over 2 million recipes analyzed."
+    "In other words out of 549 unique recipe tags, the hypothesis test identified 256 tags that are statistically significant in their association with being healthy. These 256 “healthy tags” were then used to filter recipes, resulting in 102 recipes that exclusively consist of these healthy tags. This represents a small subset of over 200,000 recipes analyzed."
    ]
   },
   {
@@ -2000,7 +1992,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The goal of my prediction problem is to predict likely ingredients given a set of tags. "
+    "The goal of my prediction problem is to predict cooking time based on tags and ingredients."
    ]
   },
   {
@@ -4682,230 +4674,6 @@
    ],
    "source": [
     "unique_tags"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"['pre-heat oven the 350 degrees f', 'in a mixing bowl , sift together the flours and baking powder', 'set aside', 'in another mixing bowl , blend together the sugars , margarine , and salt until light and fluffy', 'add the eggs , water , and vanilla to the margarine / sugar mixture and mix together until well combined', 'add in the flour mixture to the wet ingredients and blend until combined', 'scrape down the sides of the bowl and add the chocolate chips', 'mix until combined', 'scrape down the sides to the bowl again', 'using an ice cream scoop , scoop evenly rounded balls of dough and place of cookie sheet about 1 - 2 inches apart to allow for spreading during baking', 'bake for 10 - 15 minutes or until golden brown on the outside and soft & chewy in the center', 'serve hot and enjoy !']\""
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "recipes['steps'][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['white sugar',\n",
-       " 'brown sugar',\n",
-       " 'salt',\n",
-       " 'margarine',\n",
-       " 'eggs',\n",
-       " 'vanilla',\n",
-       " 'water',\n",
-       " 'all-purpose flour',\n",
-       " 'whole wheat flour',\n",
-       " 'baking soda',\n",
-       " 'chocolate chips']"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "recipes['ingredients'][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>name</th>\n",
-       "      <th>id</th>\n",
-       "      <th>minutes</th>\n",
-       "      <th>...</th>\n",
-       "      <th>saturated_fat_PDV</th>\n",
-       "      <th>carbohydrates_PDV</th>\n",
-       "      <th>is_healthy</th>\n",
-       "      <th>only_healthy_tags</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>111</td>\n",
-       "      <td>1 brownies in the world    best ever</td>\n",
-       "      <td>333281</td>\n",
-       "      <td>40</td>\n",
-       "      <td>...</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>115</td>\n",
-       "      <td>1 in canada chocolate chip cookies</td>\n",
-       "      <td>453467</td>\n",
-       "      <td>45</td>\n",
-       "      <td>...</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>118</td>\n",
-       "      <td>412 broccoli casserole</td>\n",
-       "      <td>306168</td>\n",
-       "      <td>40</td>\n",
-       "      <td>...</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83779</th>\n",
-       "      <td>231634</td>\n",
-       "      <td>zydeco ya ya deviled eggs</td>\n",
-       "      <td>308080</td>\n",
-       "      <td>40</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83780</th>\n",
-       "      <td>231635</td>\n",
-       "      <td>cookies by design   cookies on a stick</td>\n",
-       "      <td>298512</td>\n",
-       "      <td>29</td>\n",
-       "      <td>...</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83781</th>\n",
-       "      <td>231636</td>\n",
-       "      <td>cookies by design   sugar shortbread cookies</td>\n",
-       "      <td>298509</td>\n",
-       "      <td>20</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>83782 rows × 24 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Unnamed: 0                                          name      id  \\\n",
-       "0             111          1 brownies in the world    best ever  333281   \n",
-       "1             115            1 in canada chocolate chip cookies  453467   \n",
-       "2             118                        412 broccoli casserole  306168   \n",
-       "...           ...                                           ...     ...   \n",
-       "83779      231634                     zydeco ya ya deviled eggs  308080   \n",
-       "83780      231635        cookies by design   cookies on a stick  298512   \n",
-       "83781      231636  cookies by design   sugar shortbread cookies  298509   \n",
-       "\n",
-       "       minutes  ...  saturated_fat_PDV carbohydrates_PDV is_healthy  \\\n",
-       "0           40  ...               19.0               6.0          0   \n",
-       "1           45  ...               51.0              26.0          0   \n",
-       "2           40  ...               36.0               3.0          0   \n",
-       "...        ...  ...                ...               ...        ...   \n",
-       "83779       40  ...                5.0               0.0          0   \n",
-       "83780       29  ...               21.0               9.0          0   \n",
-       "83781       20  ...               11.0               6.0          0   \n",
-       "\n",
-       "      only_healthy_tags  \n",
-       "0                 False  \n",
-       "1                 False  \n",
-       "2                 False  \n",
-       "...                 ...  \n",
-       "83779             False  \n",
-       "83780             False  \n",
-       "83781             False  \n",
-       "\n",
-       "[83782 rows x 24 columns]"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "recipes"
    ]
   },
   {
