--- a/project04/Final.ipynb
+++ b/project04/Final.ipynb
@@ -513,7 +513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 3: Assessment of Missingness"
+    "## Assessment of Missingness"
    ]
   },
   {
@@ -831,7 +831,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 4: Hypothesis Testing"
+    "## Hypothesis Testing"
    ]
   },
   {
@@ -1985,7 +1985,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 5: Framing a Prediction Problem"
+    "## Framing a Prediction Problem"
    ]
   },
   {
@@ -4680,7 +4680,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 6: Baseline Model"
+    "## Baseline Model"
    ]
   },
   {
@@ -5309,6 +5309,13 @@
    "metadata": {},
    "source": [
     "Based on the evaluation metric, we can we see that our model performing horribly. Very horribly. The MSE suggest that the model has extremely large prediction errors. The RMSE is around 8201 minutes based on MSE,  which is an enormous error for predicting cooking time. The $R^2$ score of 0.00 indicates that the model performs no better than simply predicting the mean value for all samples. Moreover, it's negative, telling us that it's worse than just predicitng mean. Ultimately, this suggests the model has failed to capture any meaningful relationship between features and target."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Improved Model"
    ]
   },
   {
@@ -6212,7 +6219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step7: Final Model"
+    "## Final Model"
    ]
   },
   {
